# Notepad-L

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Lexilla.cmake  Scintilla.cmake
resources/: NotePad-L.manifest  NotePad-L.rc  Notepad++.manifest  Notepad++.rc  make_icon.py
resources/icons/: README.txt
resources/installer/: License.rtf
src/: CMakeLists.txt  WinMain.cpp  resource.h
src/Diff/: CompareController.cpp  CompareController.h  LineDiff.cpp  LineDiff.h
src/MISC/Common/: FileIO.cpp  FileIO.h  StringUtil.cpp  StringUtil.h
src/Macro/: MacroRecorder.cpp  MacroRecorder.h
src/Notepad_plus/: Notepad_plus.cpp  Notepad_plus.h  Notepad_plus_Window.cpp  Notepad_plus_Window.h  NppBigSwitch.cpp  NppCommands.cpp  NppIO.cpp
src/Parameters/: LangType.cpp  LangType.h  Parameters.cpp  Parameters.h  Stylers.cpp  Stylers.h
src/ScintillaComponent/: Buffer.cpp  Buffer.h  BufferManager.cpp  BufferManager.h  FindInFilesDlg.cpp  FindInFilesDlg.h  FindReplaceDlg.cpp  FindReplaceDlg.h  ScintillaEditView.cpp  ScintillaEditView.h
src/WinControls/Docking/: DocMapPanel.cpp  DocMapPanel.h  DockPanel.h  DockingManager.cpp  DockingManager.h  FindResultsPanel.cpp  FindResultsPanel.h  FolderWorkspacePanel.cpp  FolderWorkspacePanel.h  FunctionListPanel.cpp  FunctionListPanel.h
src/WinControls/TabBar/: DocTabView.cpp  DocTabView.h
